--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -1,16 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'include/base.html' %}
+{% block title %} Магазин {% endblock %}
+{% block body %}
     <h1>Добро пожаловать в наш магазин!</h1>
-    <p><a href="{% url 'registration' %}"> Регистрация</a></p>
-
     <h2>Категории:</h2>
     {% for category in categories %}
       <p><a href="{% url 'products-list' category.slug %}">{{ category.title }}</a></p>
     {% endfor %}
-</body>
-</html>
+{% endblock body %}
