--- a/templates/product/product_details.html
+++ b/templates/product/product_details.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'include/base.html' %}
+{% block title %}{{ product.title }}{% endblock %}
+{% block body %}
 <p>{{ product.id }}</p>
 <p>{{ product.title }}</p>
 <p>{{ product.description }}</p>
@@ -13,5 +9,4 @@
 {% for image in product.images.all %}
 <img width="100" height="100" src="{{ image.get_image_url }}">
 {% endfor %}
-</body>
-</html>
+{% endblock body %}
