--- a/templates/product/products_list.html
+++ b/templates/product/products_list.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'include/base.html' %}
+{% block title %} Список продуктов {% endblock %}
+{% block body %}
   {% for product in products %}
   <a href="{% url 'product-details' product.id  %}">{{ product.title }}</a>
   {% endfor %}
-</body>
-</html>
+{% endblock body %}
