--- a/account/templates/account/successfully_registration.html
+++ b/account/templates/account/successfully_registration.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Аккаунт успешно заркгистрирован</title>
-</head>
-<body>
-    <h1>Поздравляем! Вы успешно зарег-сь</h1>
+{% extends 'account_base.html' %}
+{% block title %} Поздравляем! Вы успешно зарег-сь {% endblock %}
+{% block body %}
     <p>Вам мбыло отправлено письмо для активации Вашего аккаунта</p>
-</body>
-</html>
+{% endblock %}
