--- a/templates/product/products_list.html
+++ b/templates/product/products_list.html
@@ -1,6 +1,9 @@
 {% extends 'include/base.html' %}
 {% block title %} Список продуктов {% endblock %}
 {% block body %}
+{% if user.is_staff or user.is_superuser %}
+ <a href="{% url 'product-create' %}"><button type="button">Создать новый проект</button></a>
+{% endif %}
   {% for product in products %}
   <a href="{% url 'product-details' product.id  %}">{{ product.title }}</a>
   {% endfor %}
